// 定义项目 API 的 proto 文件 可以同时描述 gRPC 和 HTTP API
// protobuf 文件参考:
//  - https://developers.google.com/protocol-buffers/
syntax = "proto3";

// @RippleRpc
// @NacosGroup DEFAULT_GROUP
// @NacosCluster orderserver
package proto;

// The User service definition.
service User {
    rpc GetInfo (GetInfoReq) returns (GetInfoReply) {}
}

message GetInfoReq {
    uint64 id = 1;
}

message GetInfoReply {
    string name = 1;
}
